# x2md

./: .gitignore  README.md  pyproject.toml
apps/: README.md
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/architecture/: repo-structure.md
scripts/: build-desktop-runtime.py  sync-desktop-runtime.py
src/x2md/: cli.py  converter.py  deps.py  io_utils.py  webapp.py
tests/: test_basic.py
