[package]
name = "x2md-desktop"
version = "0.1.0"
description = "Desktop shell for x2md"
authors = ["x2md"]
edition = "2021"

[lib]
name = "x2md_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
